--- a/style.css
+++ b/style.css
@@ -116,7 +116,22 @@ a {
 
 .logo{
     position: relative;
-    padding-top: 2%;
     width: 530px;
-    max-width: 100%;
+    max-width: 90%;
+    margin-top: 2%;
 }
+
+
+@media only screen and (max-width: 600px) {
+    .logo{
+        margin-top: 4%;    
+    }
+  }
+
+  @media only screen and (min-width: 601px) and (max-width: 790px)  {
+    .logo{
+        margin-top: 3%;    
+    }
+  }
+
+
